# HispanShieldOsLLmSecurity

./: .gitignore  CLASSIFICATION_NOTICE.md  FINAL_REPORT.md  README.md  README_EN.md  ROADMAP.md  build_demo_iso.sh  build_iso.sh  build_iso_edge.sh  final_build.sh  fix_classification.sh
.claude/: settings.local.json
.github/workflows/: rust-ci.yml
core/: test_suite.sh
core/active-defense/: deploy.sh
core/aegis_eye/: observer_daemon.py
core/anti-tamper/: self_destruct.sh
core/c2/: spectre_c2.sh
core/c2/i2p/: tunnels.conf.template
core/c2/tor/: torrc.template
core/cds/: setup_cds.sh
core/compliance/: generate_audit_artifact.sh  generate_sbom.sh  grc_engine.py  scan_compliance.sh  sovereign_forks.sh
core/llm/: finetune.sh  finetune_dataset.py
core/llm/tests/: test_alignment.py
core/nemo-guardrails/: guardrails_engine.py  requirements.txt
core/nemo-guardrails/config/: config.yml  rails.co
core/policy/: tools.yaml
core/policy_engine/: gatekeeper.py
core/rust/: .gitignore  Cargo.toml  deny.toml
core/rust/aegis-ebpf/: Cargo.toml  ROADMAP.md
core/rust/aegis-ebpf/src/: aegis-ebpf.bpf.c  main.rs  probes.rs
core/rust/aegis-gatekeeper/: Cargo.toml
core/rust/aegis-gatekeeper/src/: lib.rs
core/rust/aegis-gatekeeper/tests/: allowlist_sync.rs
core/rust/aegis-pqc/: Cargo.toml
core/rust/aegis-pqc/src/: lib.rs
core/rust/aegis-sentinel/: Cargo.toml
core/rust/aegis-sentinel/src/: active_defense.rs  auth.rs  cds.rs  classification.rs  code_signing.rs  ebpf_telemetry.rs  integrity.rs  main.rs  mls.rs  tool_router.rs
core/sandbox/: build_offensive_rootfs.sh  firecracker_runner.sh  vsock-dispatcher.sh
core/sandbox/vm-rootfs/: vmlinux-download.sh
core/sentinel_engine/: ARCHITECTURE.md
core/sentinel_engine/orchestrator/: guardrails_integration.py  main.py
core/sentinel_engine/router/: tool_router.py
core/siem/: docker-compose.yml  install_siem.sh  suricata-compose.yml
core/siem/logstash/pipeline/: hispanshield.conf
core/siem/logstash/suricata-pipeline/: suricata.conf
core/siem/suricata/rules/: aegis-custom.rules
core/threat-intel/: local_misp_setup.sh
docs/architecture/: ARCHITECTURE_MILITAR.md  SECURITY_THREAT_MODEL.md  TECHNICAL_DECISIONS.md
docs/design/: contrast-matrix.csv  doctrina-ux.md  tokens.reference.css
installer/: download_model.py  install.sh  setup_ai_firewall.sh  setup_c2.sh  setup_pqc.sh
os_base/apparmor/: opt.hispanshield.bin.llama-server  opt.hispanshield.core.rust.aegis-sentinel
os_base/audit/: fs-verity-setup.sh  immutable-audit.rules
os_base/ima/: ima-policy  setup_ima_evm.sh
os_base/pam/: pam_hispanshield.conf  u2f_keys
os_base/selinux/: README.md  aegis-mls.fc  aegis-mls.te  setup_mls.sh
os_base/sys_services/: aegis-agent-core.service  aegis-llm-runtime.service
os_base/sysctl/: apply.sh  hispanshield-hardening.conf
profile_redesign/: README.md
ui/aegis-desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json
ui/aegis-desktop/src/: App.tsx  i18n.ts  index.css
ui/aegis-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/aegis-desktop/src-tauri/src/: main.rs
ui/aegis-desktop/src/components/: AIWidget.tsx  AlertTriagePanel.tsx  AntiTamperGate.tsx  ClassificationBanner.tsx  ClassifiedAction.tsx  ConsentScreen.tsx  Dock.tsx  SecurityPanel.tsx  TopBar.tsx
ui/aegis-desktop/src/styles/: tokens.css
