[package]
name = "aegis-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.12", features = ["async"] }
aya-log = "0.12"
aya-log-parser = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
aya-tool = { version = "0.12", features = ["async"] }

[[bin]]
name = "aegis-ebpf"
path = "src/main.rs"
