[package]
name = "aegis-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Fase 0: minimal deps to compile a placeholder bin.
# Fase 2 will reintroduce aya / aya-log once the BPF object is built out-of-band.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[[bin]]
name = "aegis-ebpf"
path = "src/main.rs"
