[package]
name = "aegis-pqc"
version = "0.1.0"
edition = "2021"
description = "Post-quantum cryptography layer for HispanShield inter-daemon communications"

[dependencies]
# NIST FIPS 203 (ML-KEM / Kyber) and FIPS 204 (ML-DSA / Dilithium)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
# Classic asymmetric — kept for hybrid construction
x25519-dalek = { version = "2", features = ["getrandom"] }
# Key derivation
hkdf = "0.12"
sha3 = "0.10"
# Symmetric encryption for the established channel
aes-gcm = "0.10"
# Random
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["std"] }
# Serialisation of key material
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
