[package]
name = "aegis-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-gatekeeper = { path = "../aegis-gatekeeper" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
macaddr = "1.0"
sha2 = "0.10"
anyhow = "1.0"
aya = "0.11"
axum = "0.6"
